infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  labels:
      name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: ticketing.dev
    http:
      paths:
      - path: /api/payments/?(.*)
        backend:
          serviceName: payments-srv
          servicePort: 3000
      - path: /api/users/?(.*)
        backend:
          serviceName: auth-srv
          servicePort: 3000
      - path: /api/tickets/?(.*)
        backend:
          serviceName: tickets-srv
          servicePort: 3000
      - path: /api/orders/?(.*)
        backend:
          serviceName: orders-srv
          servicePort: 3000
      - path: /?(.*)
        backend:
          serviceName: client-srv
          servicePort: 3000
